--- a/client/style.css
+++ b/client/style.css
@@ -24,7 +24,7 @@ body {
 
 #chat_container {
   flex: 1;
-  width: 100%;
+  width: 100% !important;
   height: 100%;
   overflow-y: scroll;
 
@@ -47,6 +47,10 @@ body {
 .wrapper {
   width: 100%;
   padding: 15px;
+}
+
+.submitBtn {
+  width: min-content;
 }
 
 .ai {
